--- a/app/assets/stylesheets/main/modal.scss
+++ b/app/assets/stylesheets/main/modal.scss
@@ -156,6 +156,7 @@ $big-notebook: image_url("big-new-notebook");
   left: 231.5px;
   height: 100vh;
   transform: translate(-50%, -50%);
+  background-color: white;
 }
 
 .all-notebook-list {
@@ -292,6 +293,8 @@ $big-notebook: image_url("big-new-notebook");
     h4 {
       font-family: 'Slabo 27px', serif;
       vertical-align: middle;
+      color: rgb(126, 126, 126);
+      transform: scale(1, 0.9);
 
       .modal-empty-img {
         display: inline-block;
@@ -306,11 +309,13 @@ $big-notebook: image_url("big-new-notebook");
   
     p {
       margin-top: 10px;
+      margin-right: auto;
+      margin-left: auto;
+      width: 280px;
       font-family: gotham, helvetica, arial, sans-serif;
-      font-size: 15px;
+      font-size: 14px;
       font-weight: 300;
       letter-spacing: 0.5px;
-      font-weight: 300;
       color: #929292;
     }
   }
