--- a/app/assets/stylesheets/main/sidebar.scss
+++ b/app/assets/stylesheets/main/sidebar.scss
@@ -140,7 +140,7 @@ $tags_hover: image_url("tag-icon-hover");
   margin:0 auto;
   width: 45px;
   border: 1px solid rgb(219, 219, 219);
-  margin-top: 210px;
+  margin-top: 70%;
 }
 
 .fa-sign-out-alt {
