--- a/app/assets/stylesheets/main/quill.scss
+++ b/app/assets/stylesheets/main/quill.scss
@@ -1,9 +1,21 @@
-.quill {
+.quill-container {
   height: 100vh;
-  display: flex;
   align-content:center;
+  display: flex;
 
-  .ql-toolbar {
+  .quill {
     width: 100%;
+
+    .ql-toolbar {
+      width: 100%;
+      height: 40px;
+      border: none;
+    }
+  
+    .ql-container {
+      width: 100%;
+      height: 200px;
+      border:none;
+    }
   }
 }
