--- a/app/assets/stylesheets/main/quill.scss
+++ b/app/assets/stylesheets/main/quill.scss
@@ -13,16 +13,18 @@
     }
 
     .note-title {
-      position: absolute;
-      top: 85px;
-      margin: 9px;
-      width: 67%;
+      position: relative;
       border: none;
+      top: 85px;
+      left: 13px;
+      margin: 10px;
+      width: 90%;
       height: 50px;
       font-size: 30px;
       padding: 5px;
       font-family: 'Rokkitt', serif;
       color: rgb(0, 189, 0);
+      z-index: 5;
     }
   
     input:focus {
@@ -30,22 +32,35 @@
     }
 
     .quill {
+      position: relative;
+      bottom: 40px;
       height: 100vh;
+      padding: 10px;
+      overflow: auto;
 
       .ql-toolbar {
         width: 100%;
-        height: 45px;
+        height: 200px;
         border: none;
         overflow: auto;
+
+        span span span {
+          z-index: 6;
+        }
       }
     
       .ql-container {
-        width: 70%;
-        position: absolute;
-        top: 150px;
-        height: 75vh;
+        position: relative;
+        width: 90%;
+        min-width: 400px;
+        top: -100px;
+        height: 600px;
         padding: 5px;
         border: none;
+        overflow: auto;
+        font-size: 16px;
+        border: 1px sold black;
+        
       }
     }
   }
