--- a/app/assets/stylesheets/user_auth/auth.scss
+++ b/app/assets/stylesheets/user_auth/auth.scss
@@ -20,6 +20,8 @@
 .session-div {
   background-color:#e7e7e7;
   text-align: center;
+  height: 100vh;
+  border-top: 3px solid #2dbe60;
 }
 
 @media screen and (max-width: 900px) {
