Fix bug with note delete and notebook delete, notebook delete now deletes all the notes that belong to that notebook

--- a/app/assets/stylesheets/main/quill.scss
+++ b/app/assets/stylesheets/main/quill.scss
@@ -19,7 +19,7 @@ $new-note-hover: image_url("new-note-hover.png");
     .linebreak {
       width: 300px;
       border: .5px solid #e0e0e0;
-      margin: 20px 0;
+      margin: 20px auto;
     }
 
     button {
