--- a/app/assets/stylesheets/main/notes.scss
+++ b/app/assets/stylesheets/main/notes.scss
@@ -12,6 +12,10 @@ $delete-note-hover: image_url("trash-icon-hover");
   display: flex;
   flex-direction: column;
 
+  .all-notes {
+    overflow: auto;
+  }
+
   .linebreak-note-list {
     margin: 0 auto;
     width: 300px;
