Fix create notebook error

--- a/app/assets/stylesheets/main/modal.scss
+++ b/app/assets/stylesheets/main/modal.scss
@@ -5,6 +5,11 @@ $notebook: image_url("notebook");
 $big-notebook: image_url("big-new-notebook");
 
 .fade-modal-background {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
   background: rgba(255, 255, 255, 1);
   animation-duration: .5s;
   z-index: 20;
@@ -188,8 +193,10 @@ $big-notebook: image_url("big-new-notebook");
     height:60px;
     border-bottom: 2px solid #eeeeee;
 
+
     .modal-notebook-notebook-title {
       padding: 18px;
+
 
       p {
         float: left;
