Add slide effect on closeModal

--- a/app/assets/stylesheets/main/modal.scss
+++ b/app/assets/stylesheets/main/modal.scss
@@ -157,6 +157,7 @@ $big-notebook: image_url("big-new-notebook");
   height: 100vh;
   transform: translate(-50%, -50%);
   background-color: white;
+  animation-duration: 0.6s !important;
 }
 
 .all-notebook-list {
