--- a/app/assets/stylesheets/main/notes.scss
+++ b/app/assets/stylesheets/main/notes.scss
@@ -110,17 +110,18 @@ $delete-note-hover: image_url("trash-icon-hover");
 .each-note {
   border-bottom: 1px solid #f1f1f1;
   width: 334px;
-  height: 70px;
+  height: 100px;
   padding: 8px;
   transition: 0.25s;
   text-align: center;
+  overflow: hidden;
 
   .title-div {
     text-align: left;
     width: 260px;
     float: left;
     font-family: 'Slabo 27px', serif;
-    font-size: 18px;
+    font-size: 20px;
     font-weight: 300;
     color: #5f5f5f;
     padding: 5px;
@@ -128,6 +129,30 @@ $delete-note-hover: image_url("trash-icon-hover");
     letter-spacing: .5px;
     transform: scale(1, 0.9);
     padding-left: 10px;
+
+    .index-note-title {
+      margin-bottom: 4px;
+    }
+
+    .note-date {
+      color: #acacac;
+      font-size: 13px;
+      letter-spacing: 0.5px;
+      transform: scale(0.9, 1);
+      font-family: 'Montserrat', sans-serif;
+      position: relative;
+      right: 12px;
+      margin-bottom: 6px;
+    }
+
+    .note-body {
+      font-family: 'Montserrat', sans-serif;
+      font-weight: 400;
+      font-size: 16px;
+      color: #8b8b8b;
+      height: 20px;
+      overflow: hidden;
+    }
   }
 
   .delete-div {
@@ -158,6 +183,10 @@ $delete-note-hover: image_url("trash-icon-hover");
   background-color: #3dbe60;
   .title-div {
     color: rgb(243, 243, 243);
+
+    .note-date, .note-body {
+      color: rgb(243, 243, 243);
+    }
   }
   .index-note-delete {
     background-color: #3dbe60;
