finish editing tag modal

--- a/app/assets/stylesheets/main/modal.scss
+++ b/app/assets/stylesheets/main/modal.scss
@@ -231,8 +231,10 @@ $tag-edit-hover: image_url("tag-edit-icon-hover");
           border: 1px solid #dadada;
           width: 250px;
           height: 18px;
-          font-size: 17px;
-          color: #6b6b6b;
+          font-size: 14px;
+          padding-left: 10px;
+          font-family: 'Montserrat', sans-serif;
+          color: #363636;
           background-color: #f5f5f5;
           outline:none;
           border-radius: 4px;
