--- a/app/assets/stylesheets/main/modal.scss
+++ b/app/assets/stylesheets/main/modal.scss
@@ -86,6 +86,14 @@ $tag-edit-hover: image_url("tag-edit-icon-hover");
       float: right;
     }
 
+    .new-notebook-create-disabled {
+      opacity: 0.6;
+      color: white;
+      background-color: #3dbe60;
+      border: none;
+      float: right;
+    }
+
     .new-notebook-cancel {
       border: 0.5px solid #dadada;
       background-color: #e9e9e9;
@@ -98,7 +106,7 @@ $tag-edit-hover: image_url("tag-edit-icon-hover");
     }
 
     .new-notebook-cancel:hover {
-      background-color: #929292;
+      background-color: #c8c8c8;
     }
   }
 
