--- a/app/assets/stylesheets/main/notes.scss
+++ b/app/assets/stylesheets/main/notes.scss
@@ -43,6 +43,17 @@ $delete-note-hover: image_url("trash-icon-hover");
     }
   }
 
+  .note-list-tag-note {
+    height: 30px;
+    text-align: center;
+    vertical-align: middle;
+    color: rgb(190, 190, 190);
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+    letter-spacing: 0.8px;
+    font-weight:100;
+  }
+
   .note-list-id-title {
     text-align: center;
     vertical-align: middle;
@@ -57,6 +68,26 @@ $delete-note-hover: image_url("trash-icon-hover");
     font-size: 25px;
     letter-spacing: .7px;
     margin-bottom: 30px;
+  }
+
+  .tag {
+    background-color: white;
+    height: 80px;
+    font-size: 24px;
+    color: #727272;
+    text-align: left;
+
+    .tag-title {
+      margin-left: 25px;
+
+      p {
+        font-family: 'Montserrat', sans-serif;
+        width: 300px;
+        overflow: hidden;
+        font-size: 24px;
+        font-weight: 100;
+      }
+    }
   }
 }
 
