Add pointer to all clickables, making new note now puts the new note to react quill

--- a/app/assets/stylesheets/main/modal.scss
+++ b/app/assets/stylesheets/main/modal.scss
@@ -414,6 +414,7 @@ $add-tag-icon: image_url("add-tag-icon");
     padding: 8px;
     transition: 0.25s;
     text-align: center;
+    cursor: pointer;
 
     .title-div {
       text-align: left;
