--- a/app/assets/stylesheets/main/quill.scss
+++ b/app/assets/stylesheets/main/quill.scss
@@ -5,6 +5,7 @@ $new-note-icon: image_url("new-note-icon.png");
 $new-note-hover: image_url("new-note-hover.png");
 $note-delete: image_url("note-delete");
 $note-delete-hover: image_url("note-delete-hover");
+$tag-icon-small: image_url("tag-icon-small");
 
 .quill-outer-container {
   height: 100vh;
@@ -84,6 +85,8 @@ $note-delete-hover: image_url("note-delete-hover");
 
       .notebook-section {
         vertical-align: middle;
+        display:inline-block;
+        margin-right: 30px;
         
         .notebook-trash {
           background-repeat: no-repeat;
@@ -93,11 +96,23 @@ $note-delete-hover: image_url("note-delete-hover");
           height: 24px;
           background-image: $note-delete;
           cursor: pointer;
-
         }
         
         .notebook-trash:hover {
           background-image: $note-delete-hover;
+        }
+
+        .tag-img {
+          background-repeat: no-repeat;
+          background-position: center;
+          background-size: 100%;
+          background-image: $tag-icon-small;
+          width: 16px;
+          height: 16px;
+          display: inline-block;
+          margin-right: 6px;
+          position: relative;
+          top:4px;
         }
         
         .notebook-img {
@@ -109,6 +124,8 @@ $note-delete-hover: image_url("note-delete-hover");
           height: 16px;
           display: inline-block;
           margin-right: 6px;
+          position: relative;
+          top:4px;
         }
 
         .notebook-title {
@@ -116,14 +133,44 @@ $note-delete-hover: image_url("note-delete-hover");
           margin-top: 50px;
 
           span {
-            font-family: 'Montserrat',
-            sans-serif;
-            font-weight: 300;
+            font-family: 'Montserrat', sans-serif;
+            color: #505050;
             font-size: 14px;
-            color: #8b8b8b;
             height: 20px;
             overflow: hidden;
             margin-bottom: 4px;
+            
+          }
+
+          div {
+            display: inline-block;
+            margin-right: 10px;
+          }
+
+          .tags {
+            background-color: #f5f5f5;
+            border: 1px solid #dadada;
+            border-radius: 5px;
+            height: 18px;
+            vertical-align: middle;
+            margin-left: 4px;
+            padding-right: 10px;
+            padding-left: 10px;
+
+            .current-tag {
+              position: relative;
+              bottom: 4px;
+                            
+            }
+          }
+
+          .tag-form-input {
+            width: 50px;
+            background-color: #f5f5f5;
+            border: 1px solid #dadada;
+            border-radius: 5px;
+            height: 18px;
+            font-size: 14px;
           }
         }
       }
