--- a/app/assets/stylesheets/main/quill.scss
+++ b/app/assets/stylesheets/main/quill.scss
@@ -150,16 +150,16 @@ $tag-icon-small: image_url("tag-icon-small");
           .tags {
             background-color: #f5f5f5;
             border: 1px solid #dadada;
-            border-radius: 5px;
-            height: 18px;
+            border-radius: 3px;
+            height: 20px;
             vertical-align: middle;
-            margin-left: 4px;
+            margin-left: 3px;
             padding-right: 10px;
             padding-left: 10px;
 
             .current-tag {
               position: relative;
-              bottom: 4px;
+              bottom: 2px;
                             
             }
           }
@@ -168,9 +168,10 @@ $tag-icon-small: image_url("tag-icon-small");
             width: 50px;
             background-color: #f5f5f5;
             border: 1px solid #dadada;
-            border-radius: 5px;
-            height: 18px;
-            font-size: 14px;
+            color: #505050;
+            border-radius: 3px;
+            height: 20px;
+            font-size: 15px;
           }
         }
       }
