--- a/app/assets/stylesheets/main/quill.scss
+++ b/app/assets/stylesheets/main/quill.scss
@@ -6,6 +6,7 @@ $new-note-hover: image_url("new-note-hover.png");
 $note-delete: image_url("note-delete");
 $note-delete-hover: image_url("note-delete-hover");
 $tag-icon-small: image_url("tag-icon-small");
+$green: #3dbe60;
 
 .quill-outer-container {
   height: 100vh;
@@ -80,11 +81,10 @@ $tag-icon-small: image_url("tag-icon-small");
     .tool-container {
       width: 100%;
       height: 40px;
-      margin: 30px;
+      margin: 20px;
       margin-bottom: 20px;
 
       .notebook-section {
-        vertical-align: middle;
         display:inline-block;
         margin-right: 30px;
         
@@ -130,7 +130,7 @@ $tag-icon-small: image_url("tag-icon-small");
 
         .notebook-title {
           display: inline-block;
-          margin-top: 50px;
+          margin-top: 30px;
 
           span {
             font-family: 'Montserrat', sans-serif;
@@ -149,25 +149,50 @@ $tag-icon-small: image_url("tag-icon-small");
 
           .tags {
             background-color: #f5f5f5;
-            border: 1px solid #dadada;
+            border: 1px solid #e4e3e3;
             border-radius: 3px;
             height: 20px;
             vertical-align: middle;
             margin-left: 3px;
-            padding-right: 10px;
+            padding-right: 6px;
             padding-left: 10px;
+            vertical-align: middle;
+            text-align: center;
 
             .current-tag {
               position: relative;
               bottom: 2px;
-                            
+                
+              .tags-delete-button {
+                background-color: #f5f5f5;
+                height: 10px;
+                width: 10px;
+                font-size: 10px;
+                float: right;
+                margin-left: 6px;
+                margin-top: 2px;
+              }
+            }
+          }
+
+          .tags:hover {
+            background-color: $green;
+
+            .current-tag {
+              color: white;
+
+              .tags-delete-button {
+                background-color: $green;
+                color: white;
+                cursor: pointer;
+              }
             }
           }
 
           .tag-form-input {
             width: 50px;
             background-color: #f5f5f5;
-            border: 1px solid #dadada;
+            border: 1px solid #e4e3e3;
             color: #505050;
             border-radius: 3px;
             height: 20px;
@@ -180,7 +205,7 @@ $tag-icon-small: image_url("tag-icon-small");
     .note-title {
       position: relative;
       border: none;
-      top: 85px;
+      top: 65px;
       left: 13px;
       margin: 10px;
       width: 90%;
@@ -188,7 +213,7 @@ $tag-icon-small: image_url("tag-icon-small");
       font-size: 30px;
       padding: 5px;
       font-family: 'Rokkitt', serif;
-      color: rgb(0, 189, 0);
+      color: $green;
       z-index: 5;
     }
   
@@ -198,7 +223,7 @@ $tag-icon-small: image_url("tag-icon-small");
 
     .quill {
       position: relative;
-      bottom: 40px;
+      bottom: 60px;
       height: 100vh;
       padding: 10px;
       overflow: auto;
