--- a/app/assets/stylesheets/main/quill.scss
+++ b/app/assets/stylesheets/main/quill.scss
@@ -77,6 +77,7 @@ $green: #3dbe60;
   .quill-container {
     float: left;
     width: 100%;
+    min-width: 1325px;
 
     .tool-container {
       width: 100%;
@@ -87,7 +88,8 @@ $green: #3dbe60;
       .notebook-section {
         display:inline-block;
         margin-right: 30px;
-        
+        margin-left: 5px;
+
         .notebook-trash {
           background-repeat: no-repeat;
           background-position: center;
@@ -161,7 +163,7 @@ $green: #3dbe60;
 
             .current-tag {
               position: relative;
-              bottom: 2px;
+              bottom: 2.5px;
                 
               .tags-delete-button {
                 background-color: #f5f5f5;
@@ -205,6 +207,7 @@ $green: #3dbe60;
     .note-title {
       position: relative;
       border: none;
+      border-top: 1px solid #e4e3e3;
       top: 65px;
       left: 13px;
       margin: 10px;
